remove gorilla mux dependency
