# swagger.yaml
@@ -1,33 +1,108 @@
-  /pets/findByStatus:
+swagger: '2.0'
+info:
+  version: '0.1.0'
+  title: Elephancy backend (Simple)
+  description: Elephancy backend (Simple)
+host: example.com
+basePath: /api
+schemes:
+  - http
+consumes:
+  - application/json
+produces:
+  - application/json
+paths:
+  /pages:
     get:
-      tags:
-        - pet
-      summary: Finds Pets by status
-      description: Multiple status values can be provided with comma seperated strings
-      operationId: findPetsByStatus
+      description: Returns all pages 
+      operationId: listPages
       produces:
         - application/json
-        - application/xml
-      parameters:
-        - in: query
-          name: status
-          description: Status values that need to be considered for filter
-          required: false
-          type: array
-          items:
-            type: string
-          collectionFormat: multi
       responses:
-        "200":
-          description: successful operation
+        '200':
+          description: pages response
           schema:
             type: array
             items:
-              $ref: "#/definitions/Pet"
-        "400":
-          description: Invalid status value
-      security:
-        - petstore_auth:
-          - write_pets
-          - read_pets
-          
+              $ref: '#/definitions/page'
+        default:
+          description: unexpected error
+          schema:
+            $ref: '#/definitions/errorModel'
+  /pages/FindPageByPrettyURL:
+    get:
+      description: Find page by pretty url 
+      operationId: findPageByPrettyURL
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: return page
+          schema:
+            $ref: '#/definitions/page'
+        '404':
+          description: page not found
+        default:
+          description: unexpected error
+          schema:
+            $ref: '#/definitions/errorModel'
+  /pages/{id}:
+    get:
+      description: Returns a page based on a single ID
+      operationId: findPageById
+      produces:
+        - application/json
+        - application/xml
+        - text/xml
+        - text/html
+      parameters:
+        - name: id
+          in: path
+          description: ID of page to fetch
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: page response
+          schema:
+            $ref: '#/definitions/page'
+        default:
+          description: unexpected error
+          schema:
+            $ref: '#/definitions/errorModel'
+definitions:
+  page:
+    type: object
+    required:
+      - id
+      - resource
+      - prettyurl
+      - linkname
+      - linkweight
+      - metatitle
+    properties:
+      id:
+        type: integer
+        format: int64
+      resource:
+        type: string
+      prettyurl:
+        type: string
+      linkname:
+        type: string
+      linkweight:
+        type: string
+      metatitle:
+        type: string
+  errorModel:
+    type: object
+    required:
+      - code
+      - message
+    properties:
+      code:
+        type: integer
+        format: int32
+      message:
+        type: string
